--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,19 +57,36 @@ jobs:
 
   build-linux:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch: [amd64, arm64, arm]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: ">=1.19.7"
+
+      - name: Set GOARCH environment variable
+        run: |
+          if [ "${{ matrix.arch }}" = "amd64" ]; then
+            echo "GOARCH=amd64" >> $GITHUB_ENV
+          elif [ "${{ matrix.arch }}" = "arm64" ]; then
+            echo "GOARCH=arm64" >> $GITHUB_ENV
+          elif [ "${{ matrix.arch }}" = "arm" ]; then
+            echo "GOARCH=arm" >> $GITHUB_ENV
+            echo "GOARM=7" >> $GITHUB_ENV
+          fi
+
       - name: Go Build
-        run: go build -o ssh-sync -ldflags "-X main.version=${{github.ref_name}}"
+        run: go build -o ssh-sync-${{ matrix.arch }} -ldflags "-X main.version=${{github.ref_name}}"
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ssh-sync
-          path: ./ssh-sync
+          name: ssh-sync-${{ matrix.arch }}
+          path: ./ssh-sync-${{ matrix.arch }}
           retention-days: 5
+
       - name: Install FPM
         run: |
           sudo apt-get update
@@ -78,37 +95,37 @@ jobs:
 
       - name: Create a .deb package
         run: |
-          fpm -s dir -t deb -n ssh-sync -v ${{ github.ref_name }} --description "ssh-sync" \
+          fpm -s dir -t deb -a ${{ matrix.arch }} -n ssh-sync -v ${{ github.ref_name }} --description "ssh-sync" \
           --deb-no-default-config-files \
-          ./ssh-sync=/usr/local/bin/ssh-sync
+          ./ssh-sync-${{ matrix.arch }}=/usr/local/bin/ssh-sync
 
       - name: Create an .rpm package
         run: |
-          fpm -s dir -t rpm -n ssh-sync -v ${{ github.ref_name }} --description "ssh-sync" \
-          ./ssh-sync=/usr/local/bin/ssh-sync
+          fpm -s dir -t rpm -a ${{ matrix.arch }} -n ssh-sync -v ${{ github.ref_name }} --description "ssh-sync" \
+          ./ssh-sync-${{ matrix.arch }}=/usr/local/bin/ssh-sync
 
       - name: Create an .apk package (Alpine)
         run: |
-          fpm -s dir -t apk -n ssh-sync -v ${{ github.ref_name }} --description "ssh-sync" \
-          ./ssh-sync=/usr/local/bin/ssh-sync
+          fpm -s dir -t apk -a ${{ matrix.arch }} -n ssh-sync -v ${{ github.ref_name }} --description "ssh-sync" \
+          ./ssh-sync-${{ matrix.arch }}=/usr/local/bin/ssh-sync
 
       - name: Organize Packages by Type
         run: |
-          mkdir -p ./debian
-          mkdir -p ./rpm
+          mkdir -p ./debian/${{ matrix.arch }}
+          mkdir -p ./rpm/${{ matrix.arch }}
 
           # Move packages to their respective directories
-          mv *.deb ./debian/ || true
-          mv *.rpm ./rpm/ || true
+          mv *.deb ./debian/${{ matrix.arch }}/ || true
+          mv *.rpm ./rpm/${{ matrix.arch }}/ || true
 
       - name: Upload Linux Packages
         uses: actions/upload-artifact@v4
         with:
-          name: packages
+          name: packages-${{ matrix.arch }}
           path: |
             *.apk
-            ./debian/*.deb
-            ./rpm/*.rpm
+            ./debian/${{ matrix.arch }}/*.deb
+            ./rpm/${{ matrix.arch }}/*.rpm
 
       - name: Deploy Packages to Repository Server
         if: startsWith(github.ref, 'refs/tags/')
@@ -118,7 +135,7 @@ jobs:
           username: ${{ secrets.REPO_SERVER_USER }}
           key: ${{ secrets.REPO_SERVER_SSH_KEY }}
           port: ${{ secrets.REPO_SERVER_PORT }}
-          source: "./debian/*.deb,./rpm/*.rpm"
+          source: "./debian/${{ matrix.arch }}/*.deb,./rpm/${{ matrix.arch }}/*.rpm"
           target: ${{ secrets.REPO_SERVER_PATH }}
           overwrite: true
 
@@ -206,6 +223,14 @@ jobs:
           script: |
             cd ${{ secrets.REPO_SERVER_PATH }}/debian
 
+            # Flatten directory structure for Debian repo (combine all architectures)
+            find . -name "*.deb" -path "*/amd64/*" -exec mv {} . \;
+            find . -name "*.deb" -path "*/arm64/*" -exec mv {} . \;
+            find . -name "*.deb" -path "*/arm/*" -exec mv {} . \;
+
+            # Remove empty architecture directories
+            rmdir */amd64 */arm64 */arm 2>/dev/null || true
+
             # Generate Packages file
             dpkg-scanpackages --multiversion . > Packages
             gzip -k -f Packages
@@ -251,5 +276,5 @@ jobs:
         uses: actions/download-artifact@v4
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "./ssh-sync-setup/ssh-sync-setup.exe,./ssh-sync/ssh-sync,./packages/*.deb,./packages/*.rpm,./packages/*.apk"
+          artifacts: "./ssh-sync-setup/ssh-sync-setup.exe,./ssh-sync-amd64/ssh-sync-amd64,./ssh-sync-arm64/ssh-sync-arm64,./ssh-sync-arm/ssh-sync-arm,./packages-amd64/debian/amd64/*.deb,./packages-amd64/rpm/amd64/*.rpm,./packages-amd64/*.apk,./packages-arm64/debian/arm64/*.deb,./packages-arm64/rpm/arm64/*.rpm,./packages-arm64/*.apk,./packages-arm/debian/arm/*.deb,./packages-arm/rpm/arm/*.rpm,./packages-arm/*.apk"
           token: ${{ secrets.ACCESS_TOKEN_CLASSIC }}
